[package]
name = "bsync"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/losfair/bsync"
description = "Incremental, multi-version remote backup tool for block devices."
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
include = ["/src", "/bsync-transmit-dist"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
structopt = "0.3.23"
hex = "0.4.3"
ssh2 = "0.9.3"
shell-escape = "0.1.5"
parking_lot = "0.11"
byteorder = "1.4.3"
itertools = "0.10.1"
rusqlite = "0.25.3"
blake3 = "1.0.0"
serde_yaml = "0.8"
prettytable-rs = "0.8"
chrono = "0.4.19"
nbd = "0.2.3"
phf = { version = "0.10", default-features = false, features = ["macros"] }
lazy_static = "1"
size_format = "1.0.2"
fs2 = "0.4.3"
indicatif = "0.16.2"
sha2 = "0.9.8"
snap = "1"
serde_json = "1"
dirs = "4.0.0"

[features]
vendored = ["ssh2/vendored-openssl", "rusqlite/bundled"]
